# aNtaerus

./: .editorconfig  .gitignore  .golangci.yml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  Taskfile.yml  cahier-des-charges.md  docker-compose.yml  tasks.md
.github/workflows/: ci.yml
.trae/documents/: antaerus-architecture-technique.md  antaerus-prd-fondation.md  plan-ajout-deepseek-propre.md  plan-continuite-tasks-cdc-antaerus.md  plan-env-config-strategy-antaerus.md  plan-execution-m0-1-finalisation-stricte.md  plan-fondation-monorepo-antaerus.md  plan-identite-assistant-antaerus.md  plan-m0-1-migration-stricte-antaerus.md  plan-m0-2-ci-tooling-strict.md  plan-m0-3-communication-interservices.md  plan-m0-3-finalisation-interservices.md  plan-m0-4-securite-fondamentale.md  plan-m1-1-gateway-infra-socle.md  plan-m1-1-gateway-websocket-auth-rate-limit.md  plan-m1-2-finalisation-python-brain.md  plan-m1-2-python-brain-llm-memory.md  plan-m1-3-react-vite-ui-core.md  plan-m1-4-finalisation-livraison.md  plan-m1-4-integration-texte.md  plan-m2-1-engine-rust-audio.md  plan-m2-2-go-rust-integration-voix.md  plan-m2-3-react-voice-ui.md  plan-readme-open-source-pack-mit.md
antaerus/: .env.example  README.md  __init__.py  docker-compose.yml  go.mod  go.sum
antaerus/docs/: contracts.md
antaerus/docs/security/: SECRETS.md
antaerus/engine/: bootstrap.go
antaerus/engine/events/: bus.go  bus_test.go
antaerus/interfaces/web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
antaerus/kernel/: __init__.py
antaerus/kernel/approval/: gate.md
antaerus/kernel/contracts/: __init__.py  contracts.go  contracts.py  contracts.rs  protocols.go  protocols.py  (+1 more)
antaerus/providers/brain_python/: .importlinter  README.md  bootstrap.py  pyproject.toml  run_import_linter.py
antaerus/providers/brain_python/src/antaerus_brain/: app.py  chat.py  config.py  prompting.py
antaerus/providers/brain_python/src/antaerus_brain/api/: health.py  llm.py  memory.py
antaerus/providers/brain_python/src/antaerus_brain/llm/: __init__.py  api.py  factory.py  local.py  streaming.py
antaerus/providers/brain_python/src/antaerus_brain/memory/: __init__.py  ingest.py  kernel.py  mirror.py  schemas.py  search.py
antaerus/providers/brain_python/tests/: test_chat_session.py  test_health.py  test_llm_api.py  test_llm_factory.py  test_llm_streaming.py  test_memory_api.py  test_memory_ingest.py  test_memory_kernel.py  test_memory_search.py  test_secrets.py  test_secrets_no_leak.py
antaerus/providers/engine_rust/: Cargo.toml  bootstrap.rs
antaerus/providers/engine_rust/src/: bootstrap.rs  config.rs  crypto.rs  grpc.rs  grpc_service.rs  http.rs  lib.rs  main.rs  state.rs
antaerus/providers/engine_rust/src/audio/: capture.rs  mixer.rs  mod.rs  resampler.rs  stt.rs  tts.rs  vad.rs
antaerus/providers/engine_rust/src/protocol/: server.rs
antaerus/providers/engine_rust/tests/: audio_mixer.rs  audio_resampler.rs  crypto.rs  health.rs  secrets.rs  voice_latency.rs
antaerus/providers/engine_rust/tools/proto_codegen/: Cargo.toml
antaerus/providers/engine_rust/tools/proto_codegen/src/: main.rs
antaerus/scripts/: dev-all.ps1  dev-all.sh  dev-brain.ps1  dev-brain.sh  dev-engine.ps1  dev-engine.sh  dev-gateway.ps1  dev-gateway.sh  dev-web.ps1  dev-web.sh  stop-all.ps1
brain_python/: pyproject.toml
brain_python/src/antaerus_brain/: app.py  config.py
brain_python/tests/: test_health.py
contracts/: system-status.schema.json
docs/: contracts.md
engine_rust/: Cargo.toml
engine_rust/src/: config.rs  main.rs  state.rs
engine_rust/tests/: health.rs
gateway_go/: go.mod
scripts/: dev-all.ps1  dev-all.sh  dev-brain.ps1  dev-brain.sh  dev-engine.ps1  dev-engine.sh  dev-gateway.ps1  dev-gateway.sh  dev-web.ps1  dev-web.sh
web/src/: App.test.tsx
(+118 files in other folders)
