[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "antaerus-brain"
version = "0.1.0"
description = "Service Python minimal pour la fondation aNtaerus"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiosqlite>=0.20,<1.0",
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
  "litellm>=1.74,<2.0",
  "pydantic>=2.7,<3.0",
  "python-dotenv>=1.0,<2.0",
  "uvicorn>=0.30,<1.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "import-linter>=2.1,<3.0",
  "mypy>=1.10,<2.0",
  "pytest>=8.0,<9.0",
  "ruff>=0.6,<1.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "../../.."]
testpaths = ["tests"]
markers = [
  "integration: marks tests requiring a full integration environment"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
mypy_path = ["../../..", "src"]
files = ["src", "tests", "../../kernel/contracts", "../../kernel/settings"]
check_untyped_defs = true
warn_unused_ignores = true
disallow_any_generics = false
explicit_package_bases = true
